OOM（“Out of Memory”）异常的2种原因